--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -13,7 +13,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let i of data">
+                    <tr *ngFor="let i of datas">
                         <td>{{i.courseTitle}}</td>
                         <td>{{i.courseDescription}}</td>
                         <td>{{i.courseVenue}}</td>
