--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -11,7 +11,7 @@
             <a class="nav-link" routerLink="/">View</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/">Add</a>
+            <a class="nav-link" routerLink="/add">Add</a>
           </li>
         
         </ul>
