--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -13,7 +13,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/add">Add</a>
           </li>
-        
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/search">Search</a>
+          </li>
         </ul>
       </div>
     </div>
